--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,3 @@
-<p>this is a test</p>
-
 
 <% @products.each do |productDisplay| %>
 <div class="columns is-mobile is-multiline is-centered is-3-desktop">
@@ -14,13 +12,13 @@
           </div>
         <% end %>
         <p class="title">
-          <%= productDisplay.name %>
+          <%= link_to productDisplay.name, productDisplay %>
         </p>
         <p><%= productDisplay.description %> </p>
       </div>
       <footer class="card-footer">
         <p class="card-footer-item">
-          Price: <br><%= productDisplay.price%>
+          Price: <br><%= productDisplay.price.round %>
         </p>
 
       </footer>
