--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,8 @@
                 <a class="navbar-item" href="/about/">
                   About
                 </a>
-                <a class="navbar-item" href="/stats/">
-                  Stats
-                </a>
-                <a class="navbar-item" href="/types/">
-                  Types
+                <a class="navbar-item" href="/contact/">
+                  Contact Us
                 </a>
                 </div>
               </div>
