--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 
 <% @products.each do |productDisplay| %>
+<%= paginate productDisplay %>
 <div class="columns is-mobile is-multiline is-centered is-3-desktop">
 <div class="column is-one-third">
     <div class="card">
