--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -7,8 +7,9 @@
 
   <%= f.submit %>
 <% end %>
-<%= paginate @products %>
-<% @products.each do |productDisplay| %>
+<%= paginate @test %>
+
+<% @test.each do |productDisplay| %>
 <div class="columns is-mobile is-multiline is-centered is-3-desktop">
 <div class="column is-one-third">
     <div class="card">
