adding add to cart and remove to cart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
       </div>
     </section>
       <div class="container">
+          <%= debug session[:shopping_cart] %>
           <%= yield %>
       </div>
   </body>
