--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,17 @@
                 </div>
               </div>
               <div class="navbar-end">
-                <div class="navbar-item">
+                  <% if user_signed_in? %>
+                    <div class="navbar-item has-dropdown is-hoverable">
+                      <a class="navbar-link"><%= current_user.email %> </a>
+                      <div class="navbar-dropdown">
+                        <a class="navbar-item"><%= link_to 'Edit Profile', edit_user_registration_path %></a>
+                        <a class="navbar-item"> <%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
+                      </div>
+                    <% else %>
+                      <a class="navbar-item"> <%= link_to "Sign Up", new_user_registration_path %> </a>
+                      <a class="navbar-item"><%= link_to "Login" , new_user_session_path %> </a>
+                  <% end %>
                 </div>
               </div>
           </nav>
