--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -39,6 +39,10 @@
           <input class="button is-dark" type="submit" value="Add to Cart">
         <% end %>
       <% end %>
+      <%= form_with url: checkout_create_path, remote: true do %>
+        <%= hidden_field_tag(:id, productDisplay.id, autocomplete: "off") %>
+        <input class="button is-primary" type="submit" value="Buy Now">
+      <%end %>
 
       </footer>
     </div>
