--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,8 +27,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :province %>
-    <%= f.text_field :province_user.name %>
+    <%= f.label :address %><br />
+    <%= f.text_field :address, autocomplete: "address" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :province %> <br />
+    <%= f.select :province, options_from_collection_for_select(Province.all, :id, :name), autocomplete: "province" %>
   </div>
 
   <div class="field">
