as far as i can get now with updating Province

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label :province %> <br />
-    <%= f.select :province, options_from_collection_for_select(Province.all, :id, :name), autocomplete: "province" %>
+    <%= f.select :province, options_from_collection_for_select(Province.all, :id, :name) %>
   </div>
 
   <div class="field">
